--- a/style.css
+++ b/style.css
@@ -1,13 +1,89 @@
-body {
+@font-face {
+    font-family: "oldlondon";
+    src: url("./Assets/fonts/old_london/OldLondon.ttf");
+}
+
+html, body {
     margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #333;
+    background-color: black;
+    font-family: "oldlondon", sans-serif !important;
+}
+
+.opening-section {
+    position: absolute; /* Ensure it sticks to the top and left edges */
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    display: block;
+    background-image: url('Assets/Images/Opening.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    z-index: 1; /* Ensure the section is below the overlay */
+}
+
+.opening-section::before {
+    content: ''; /* Necessary to create the pseudo-element */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Dark overlay */
+    z-index: 1; /* Ensure the overlay is above the background image but below the content */
+    pointer-events: none; /* Allow clicks to pass through */
+}
+
+h1, h3 {
+    position: absolute;
+    z-index: 2; /* Ensure the text is above the overlay */
+}
+
+h1 {
+    left: 50%;
+    top: 30%;
+    transform: translate(-50%, -50%) !important;
+    font-size: 80px;
+    color: red;
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 1) !important;
+}
+
+h3 {
+    left: 50%;
+    top: 60%;
+    transform: translate(-50%, -50%) !important;
+    font-size: 50px;
+    color: red;
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 1) !important;
+    cursor: pointer; /* Makes the h3 element look clickable */
 }
 
 canvas {
     border: 1px solid #000;
-    background-color: #ccc;
+    background-color: lightgreen;
+}
+
+#moneyCount {
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    transform: translate(0,-50%);
+    font-size: 30px;
+    color: gold;
+}
+
+.game-section {
+    display: none; /* Hide the game section by default */
 }
