change to enemy splicing logic, and adding score increases upon destroying enemy

--- a/style.css
+++ b/style.css
@@ -92,6 +92,10 @@ canvas {
     color: red;
 }
 
+#scoreCount{
+    color: white;
+}
+
 .game-section {
     display: none; /* Hide the game section by default */
 }
