--- a/style.css
+++ b/style.css
@@ -103,3 +103,35 @@ canvas {
 .game-over{
     display: none;
 }
+
+.tower-select{
+    position: absolute;
+    right: 50px;
+    top: 50px
+}
+
+.select-heading{
+    font-size: 50px;
+    margin: 0;
+}
+
+.tower-select p{
+    color: red;
+}
+
+.tower-image-and-stats{
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    cursor: pointer;
+    border: 1px solid grey;
+    padding: 2px;
+    border-radius: 5px;
+}
+
+.selected{
+    border: 1px solid red;
+    padding: 2px;
+    border-radius: 5px;
+    background: rgb(58, 58, 58);
+}
