--- a/styles.css
+++ b/styles.css
@@ -187,3 +187,8 @@ canvas {
         0 0 20px rgba(0, 255, 255, 0.7), 
         0 0 30px rgba(0, 255, 255, 0.7); /* Additional glow for intensity */
 }
+
+.alerts p{
+    font-size: 30px;
+    font-weight: bold;
+}
