--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ html, body {
     background-image: url('Assets/Images/logo.png');
     background-position: center;
     background-repeat: no-repeat;
-    background-position: center 20%;
+    background-position: center 30%;
 }
 
 .game-over{
@@ -166,7 +166,7 @@ canvas {
     padding: 5px;
 }
 
-.counters div{
+.counters div, .level-count{
     font-size: 35px;
     font-family: 'old-london';
 }
@@ -192,4 +192,19 @@ canvas {
 .alerts p{
     font-size: 30px;
     font-weight: bold;
+}
+
+.restart{
+    position: absolute;
+    top: 65%;
+    font-size: 50px;
+    background: red;
+    padding: 7px;
+}
+.main-menu{
+    position: absolute;
+    top: 80%;
+    font-size: 50px;
+    padding: 7px;
+    background: red
 }
