--- a/styles.css
+++ b/styles.css
@@ -200,11 +200,13 @@ canvas {
     font-size: 50px;
     background: red;
     padding: 7px;
+    cursor: pointer;
 }
 .main-menu{
     position: absolute;
     top: 80%;
     font-size: 50px;
     padding: 7px;
-    background: red
+    background: red;
+    cursor: pointer;
 }
