--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,12 @@
     src: url("Assets/fonts/old_london/Olondona.otf");
   }
 
+  html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+}
+
 .opening-section{
     height: 100vh;
     background: black;
@@ -74,7 +80,7 @@ body {
     grid-template-columns: 3fr 1fr; /* Default layout */
     grid-template-rows: 1fr auto; /* Default rows */
     gap: 20px;
-    min-height: 100vh; /* Full viewport height */
+    min-height: 100vh !important;
     width: 100%;
     padding: 20px;
     box-sizing: border-box;
@@ -100,6 +106,7 @@ body {
     background: black;
     text-align: center;
     border-radius: 10px;
+    max-height: 50px;
 }
 
 .game-canvas{
@@ -146,7 +153,6 @@ body {
 }
 
 canvas {
-    display: block;
     width: 100%;
     height: 100%;
 }
